[package]
name = "distinst_v2"
version = "0.1.0"
edition = "2018"

[workspace]
members = [ "crates/*" ]

[dependencies]
anyhow = "1.0.44"
bitflags = "1.3"
byteorder = "1.4.3"
devicemapper = "0.29.3"
envfile = "0.2.1"
futures = "0.3.17"
hostname-validator = "1.1.0"
libudev = "0.3.0"
pop-disk-manager = { path = "crates/disk-manager" }
serde = { version = "1.0", features = ["derive"] }
sys-mount = { git = "https://github.com/pop-os/sys-mount" }
tokio = { version = "1.12.0", features = ["full"]}
zbus = { git = "https://github.com/mmstick/zbus", branch = "main" }
zvariant = { git = "https://github.com/mmstick/zbus", branch = "main"}
postage = { version = "0.4", features = ["futures-traits"] }
rand = "0.8.4"

[features]
