[package]
name = "pop-disk-manager"
version = "0.1.0"
edition = "2021"
rust-version = "1.56.0"
license = "LGPL-3.0"

[dependencies]
cradle = "0.2.0"
devicemapper = "0.30"
gptman = "0.8.0"
libcryptsetup-rs = "0.4.4"
libudev = "0.3.0"
mbrman = "0.4.0"
os-release = "0.1.0"
qcell = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
sys-mount = { git = "https://github.com/pop-os/sys-mount" }
thiserror = "1.0.29"
ward = "2.1.0"
zbus =  { git = "https://gitlab.freedesktop.org/dbus/zbus" }
zvariant =  { git = "https://gitlab.freedesktop.org/dbus/zbus" }

[dev-dependencies]
fomat-macros = "0.3.1"

[features]
